# School

Assets - Aim Trainer Game/: Logic.cs  Target.prefab  TargetSpawn.cs
Assets - Arrow Keys Game/: MovementScript.cs
Assets - Arrow Keys Game/Scenes/: SampleScene.unity
Assets - Flappy Bird Like Game/: LogicScript.cs  PipeMove.cs  PipeSpawn.cs  PipeTest.prefab
Assets - Flappy Bird Like Game/Scenes/: SampleScene.unity
CS330/EX10/: Box.java  Cylinder.java  Main.java  Object.java  Prim.java  Sphere.java
CS330/EX11/: Baked.java  Cooked.java  Delivered.java  Main.java  Pizza.java  PizzaState.java  Undeliverable.java
CS330/EX12/: Class.java  ClassController.java  ClassView.java  Main.java
CS330/EX2/src/: Grunt.java  (+12 more)
CS330/EX4/: Bitters.java  Bourbon.java  Cherry.java  Drink.java  DrinkDecorator.java  Gin.java  Lime.java  LimeJuice.java  Main.java  Sugar.java  Vermouth.java  Vodka.java
CS330/EX6/: Android.java  Arm.java  Cabinet.java  Display.java  GPU.java  Linux.java  Main.java  NevadaFactory.java  NewJerseyFactory.java  OS.java  Payment.java  SlotMachine.java  SlotMachineFactory.java  Symbian.java  WashingtonFactory.java  WindowsME.java  WindowsXP.java  billPayment.java  coinPayment.java  crtDisplay.java  largeCabinet.java  lcdDisplay.java  mediumCabinet.java  reelsDisplay.java  smallCabinet.java  ticketPayment.java  vgaDisplay.java
CS330/EX7/: Exercise 7 Questions.docx  Logger.java  Main.java
CS330/EX8/: Bishop.java  BishopMoveCommand.java  Board.java  Command.java  King.java  KingMoveCommand.java  Knight.java  KnightMoveCommand.java  Main.java  Pawn.java  PawnMoveCommand.java  Queen.java  QueenMoveCommand.java  Rook.java  RookMoveCommand.java
CS422/Project1/: data_storage.py  decision_trees.py
CS422/Project2/: clustering.py  nearest_neighbors.py  perceptron.py
CS422/Project3/: adaboost.py
CS422/Project4/: PCA.py
EE426/main1/: main.c
EE426/main2/: main.c
EE426/main3/: main.c
Unity Code/Assets - Aim Trainer Game/: TargetScript.cs
Unity Code/Assets - Flappy Bird Like Game/: Jump.cs  PointIncrease.cs
Unity Code/Assets - Hell Kakul Gate 2 Sim/: ConeScript.cs  GameOverLogic.cs  KukuScript.cs  LogicScript.cs  MovementScript.cs  SliderScript.cs  Star.prefab  StarScript.cs  StartLogic.cs  StaticData.cs  TwoStar.prefab
cpe400/Code/: README.md  apple.txt  beemovie.txt  client.py  multiapple.txt  server.py
cs202/project1/: Output.txt  proj1  proj1.cpp
cs202/project10/: CMakeLists.txt  proj10.cpp
cs202/project2/: Project 2 Documentation.docx  cars.txt  menu.cpp  menu.h  my_string.cpp  my_string.h  output.txt  proj2  proj2.cpp
cs202/project3/: Agency.h  Makefile  Project 3 Documentation.docx  RentalCar.cpp  RentalCar.h  menu.cpp  menu.h  my_string.cpp  my_string.h  proj3.cpp
cs202/project5/proj5/: CMakeLists.txt  Project 5 Documentation.docx
cs202/project5/proj5/devel/include/VehicleHeaders/: Car.h  Vehicle.h
cs202/project5/proj5/src/: proj5.cpp
cs202/project5/proj5/src/VehicleSource/: Car.cpp  Vehicle.cpp
cs202/project6/: CMakeLists.txt  Project 6 Documentation.docx
cs202/project7/: CMakeLists.txt
cs202/project7/include/StringHeader/: MyString.h
cs202/project7/src/: proj7.cpp
cs202/project7/src/StringSource/: MyString.cpp
cs202/project8/: CMakeLists.txt
cs202/project8/include/header/: ArrayList.h  NodeList.h
cs202/project8/src/: proj8.cpp
cs202/project8/src/source/: ArrayList.cpp  NodeList.cpp
cs202/project9/: CMakeLists.txt
cs202/project9/include/header/: ArrayQueue.h  NodeQueue.h
cs202/project9/src/: proj9.cpp
cs202/project9/src/source/: ArrayQueue.cpp  DataType.cpp  NodeQueue.cpp
cs202/projectX/: Project X Documentation.docx
cs202/projectX/projX/: CMakeLists.txt
cs202/projectX/projX/include/DataType/: DataType.h
cs202/projectX/projX/include/SmartPtr/: SmartPtr.h
cs202/projectX/projX/src/: projX.cpp
cs202/projectX/projX/src/DataType/: DataType.cpp
cs202/projectX/projX/src/SmartPtr/: SmartPtr.cpp
cs219/: Blink10.py  BlinkButton.py  BlinkLED.py  LEDButton.py  debounceTest.py  insultGen.py
cs302/proj1/code/: CMakeLists.txt
cs302/proj1/code/src/delimiters/: StackLinked.cpp  delimiters.cpp
cs302/proj1/code/src/postfix/: postfix.cpp
cs302/proj1/code/src/test6/: StackArray.cpp  show6.cpp
cs302/proj2/: log.txt
cs302/proj3/code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  treeMain
cs302/proj3/code/include/: BinaryNode.h  BinaryNodeTree.h  BinarySearchTree.h  BinaryTreeInterface.h  NotFoundException.h  PrecondViolatedExcept.h
cs302/proj3/code/src/: BinaryNode.cpp  BinaryNodeTree.cpp  BinarySearchTree.cpp  NotFoundException.cpp  PrecondViolatedExcept.cpp  treeMain.cpp
cs302/proj4/: RB Tree Drawing.docx
cs302/proj4/code/: CMakeLists.txt
cs302/proj4/code/include/: LeftLeaningRedBlack.h  VoidRef.h
cs302/proj4/code/src/: LeftLeaningRedBlack.cpp  rbTreeMain.cpp
cs326/C-C++/: main  main.c  unionTest  unionTest.c
cs326/prolog/: hw7.pl
cs326/scheme/: hw2.txt  hw4.txt
cs365/: Project 1 Report.docx  dijkstra  dijkstra.cpp
cs457/: PA1 Design Document.docx  PA2 Design Document.docx  PA3 Design Document.docx  PA4 Design Document.docx  PA5 Design Document.docx
cs457/p1/: p1  p1.cpp
cs457/p2/: PA2_test.sql  p2  p2.cpp
cs457/p3/: p3  p3.cpp
cs457/p4/: p4  p4.cpp
cs457/p5/: PA5_test.sql  p5  p5.cpp
cs461/project1/: DE-results.rds  project1.R  wilcoxon-results.rds
cs461/project2/: DE-results.rds  p-empirical-euclidean.rds  p-empirical-t-score.rds  project2.R  t-observed.rds
cs477/hw4/: problem2  problem2.cpp
cs477/hw5/: problem5  problem5.cpp
cs477/hw6/: cost_pb  cost_pb.cpp  cost_pb_out.txt  cost_pc  cost_pc.cpp  cost_pc_out.txt  cost_pd  cost_pd.cpp  cost_pd_out.txt
cs482/project0/: README.md  tictac.py
cs482/project1/: README.md  naive_bayes_filter.py  train2.csv
cs482/project2/: README.md  car.npy  car.py  cart.npy  cart.py
cs491/: README.md  mix.exs
cs491/cs491_hm1_sp22-nangUnr-master/: README.adoc  README.md  mix.exs
discordBot/: main.py
stat445/: HW1.Rmd  HW10.Rmd  HW2.Rmd  HW3.Rmd  HW4.Rmd  HW5.Rmd  HW6.Rmd  HW7.Rmd  HW8.Rmd  HW9.Rmd
(+305 files in other folders)
